--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ice-setup (0.3.2) unstable; urgency=low
+
+  * incorporate 0.3.1
+  * add bump of versions in packaging files
+
+ -- Dan Mick <dan.mick@redhat.com>  Tue, 09 Jun 2015 18:56:08 -0700
+
 ice-setup (0.3.0-2) unstable; urgency=low
 
   * stamp with packaging info, modify to native package
